order processing added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,22 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/indpro
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+# Set dialect and DDL settings
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+# Show SQL queries in the console for debugging
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Initialize data.sql and schema.sql at startup
+spring.sql.init.mode=always
+spring.datasource.platform=postgres
+spring.datasource.schema=classpath:schema.sql
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.data=classpath:data.sql
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
